--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "emailjs-com": "^2.6.3",
     "firebase": "^7.15.5",
     "vue": "^2.6.12",
     "vue-router": "^3.3.4",
