--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "axios-oauth-client": "^1.3.0",
+    "axios-token-interceptor": "^0.2.0",
     "core-js": "^3.6.5",
     "emailjs-com": "^2.6.3",
     "firebase": "^7.15.5",
